- ViewBinding implemented in Activities and Fragments - TODO: ViewModels injection, token should be provided by Interceptor

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,11 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
+    //View Binding
+    buildFeatures {
+        viewBinding true
+    }
+
     //Hilt plugin
     apply plugin: 'dagger.hilt.android.plugin'
 
