--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,4 +114,7 @@ dependencies {
     implementation('com.github.thekhaeng:pushdown-anim-click:1.1.1') {
         exclude group: 'com.android.support'
     }
+
+    //Bubble seek bar
+    implementation 'com.xw.repo:bubbleseekbar:3.20-lite'
 }
